--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="FEEDBACK — 브랜드와 시장을 연결하는 유통 플랫폼" />
+    <meta property="og:description" content="유통, 브랜드, 마케팅, 제조가 하나로 연결되는 상생 플랫폼. FEEDBACK 공식 사이트" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.feedbackteams.com/" />
+    <meta property="og:image" content="https://www.feedbackteams.com/og/feedback_logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="FEEDBACK — 브랜드와 시장을 연결하는 유통 플랫폼" />
+    <meta name="twitter:description" content="유통, 브랜드, 마케팅, 제조가 하나로 연결되는 상생 플랫폼. FEEDBACK 공식 사이트" />
+    <meta name="twitter:image" content="https://www.feedbackteams.com/og/feedback_logo.png" />
   </head>
   <body>
     <div id="root"></div>
